Lots of changes/fixes/improvements